syntax = "proto3";

import "google/protobuf/empty.proto";
option go_package = "github.com/ThreeDotsLabs/cli/tdl-cli/trainings/genproto";

service Trainings {
  rpc Init(InitRequest) returns (google.protobuf.Empty) {};

  rpc GetTrainings(google.protobuf.Empty) returns (GetTrainingsResponse) {};
  rpc StartTraining(StartTrainingRequest) returns (google.protobuf.Empty) {};

  rpc NextExercise(NextExerciseRequest) returns (NextExerciseResponse) {};

  rpc VerifyExercise(VerifyExerciseRequest) returns (stream VerifyExerciseResponse) {};
}

message RequestHeader {
  string cli_version = 1;
  string cli_commit = 2;
  string os = 3;
  string architecture = 4;
  string command = 5;
}

message InitRequest {
  RequestHeader header = 2;

  string token = 1;
}

message Training {
  string id = 1;
}

message GetTrainingsResponse {
  repeated Training trainings = 1;
}

message StartTrainingRequest {
  RequestHeader header = 3;

  string training_name = 1;
  string token = 2;
}

message StartTrainingResponse {

}

message NextExerciseRequest {
  RequestHeader header = 4;

  string training_name = 1;
  string current_exercise_id = 2;
  string token = 3;
}

message NextExerciseResponse {
  enum TrainingStatus {
    IN_PROGRESS = 0;
    PAYMENT_REQUIRED = 1;
    FINISHED = 2;
  }
  TrainingStatus training_status = 4;

  string dir = 1;
  string exercise_id = 2;
  repeated File files_to_create = 3;
}

message NextExercise {
  string dir = 1;
  repeated File files_to_create = 2;
}

message VerifyExerciseRequest {
  RequestHeader header = 5;

  string exercise_id = 2;
  repeated File files = 3;
  string token = 4;
}

message File {
  string path = 1;
  string content = 2;
}

message VerifyExerciseResponse {
  bool finished = 1;
  bool successful = 2;

  string command = 8;
  string stdout = 3;
  string stderr = 4;

  bool last_exercise = 5;

  string verification_id = 6;

  map<string, string> metadata = 7;
}